Adjust alignment and width of comments and new comment form. Fixes bug where user pages would occasionally error if logged out. Fixed bugs with inconsistencies on posts with many comments.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -367,16 +367,17 @@ pre {
 
 #new_comment {
   border: 1px solid #DDD;
-  display: inline-block;
+  display: block;
   padding: 10px;
 }
 
 #comment_body {
   height: 100px;
-  width: 300px;
+  display: block;
   max-width: 813px;
   padding: 5px;
   margin-bottom: 10px;
+  width: 100%;
 }
 
 #comment_body:focus {
@@ -385,9 +386,8 @@ pre {
 }
 
 .comment {
-  display: inline-block;
+  display: block;
   border: 1px solid #DDD;
-  width: 368px;
   padding: 10px;
 }
 
@@ -408,6 +408,7 @@ pre {
   float: left;
   border: 1px solid #CCC;
   margin-right: 10px;
+  margin-bottom: 10px;
   width: 41px;
   height: 41px;
 }
@@ -449,8 +450,20 @@ pre {
 }
 
 /* Pagination */
+
 .next {
   float: right;
+}
+
+/* 940px wide */
+
+@media only screen and (max-width: 940px) {
+  #comment_body {
+    width: 100%;
+    -webkit-box-sizing: border-box;
+       -moz-box-sizing: border-box;
+            box-sizing: border-box;
+  }
 }
 
 /* Mobile */
@@ -463,7 +476,7 @@ pre {
     font-size: 2.5em;
   }
   .up,.down {
-    margin-left: -10px;
+    margin-left: -9px;
   }
   .suffrage > span {
     margin-left: -6px;
